<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/iconociruclar"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/input_round"
            android:padding="24dp"
            android:elevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recuperar_acceso"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:textColor="#333333"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recuperar_desc"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:textColor="#666666"/>

            <EditText
                android:id="@+id/etRecEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/recuperar_hint_correo"
                android:inputType="textEmailAddress"
                android:background="@drawable/input_round"
                android:paddingStart="20dp"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/btnRecuperar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="#2196F3"
                android:text="@string/recuperar_enviar"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>