<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_centerInParent="true"
        android:background="#DDFFFFFF"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/iconociruclar"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_nueva_password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="#333333"/>

        <EditText
            android:id="@+id/etNuevaPass"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/cambiar_hint_nueva_clave"
            android:inputType="textPassword"
            android:background="@drawable/input_round"
            android:paddingStart="20dp"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btnConfirmarCambio"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/cambiar_actualizar"
            android:textStyle="bold"
            android:backgroundTint="#2196F3"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
</RelativeLayout>